# bazel_rules_dtc

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  defs.md  deps.bzl
.bcr/: config.yml  metadata.template.json
.github/workflows/: build.yml  publish-bcr.yml  publish.yml  tag-and-release.yml  test.yml
integration/: BUILD.bazel  MODULE.bazel
integration/examples/cpp_board/: BUILD.bazel  board.dts  pinctrl.dtsi  soc-defs.h
integration/examples/cpp_defines/: BUILD.bazel  board.dts
integration/examples/cpp_include/: BUILD.bazel  board.dts  regs.h
integration/examples/fdtdump_check/: BUILD.bazel  sensors.dts
integration/examples/fdtget_assert/: BUILD.bazel  cpus.dts
integration/examples/minimal/: BUILD.bazel  minimal.dts
integration/examples/native_include/: BUILD.bazel  board.dts  gpio.dtsi
integration/examples/nested_include/: BUILD.bazel  top.dts
integration/examples/nested_include/clocks/: clocks.dtsi
integration/examples/nested_include/soc/: soc.dtsi
integration/examples/overlay_basic/: BUILD.bazel  base.dts  enable_uart.dts
integration/examples/overlay_stacked/: BUILD.bazel  base.dts  ov_enable.dts  ov_props.dts
integration/examples/phandles/: BUILD.bazel  soc.dts
integration/examples/roundtrip/: BUILD.bazel  board.dts
integration/examples/soc_and_board/: BUILD.bazel  board_a.dts  board_b.dts  soc.dtsi
integration/examples/symbols/: BUILD.bazel  base.dts
integration/examples/warnings/: BUILD.bazel  spi.dts
internal/: BUILD.bazel  compile.bzl  compile.md  dtb_decompile.bzl  dtb_decompile.md  dtbo_compile.bzl  dtbo_compile.md  dtc_compile.bzl  dtc_compile.md  dts_library.bzl  dts_library.md  dts_test.bzl  dts_test.md  dts_test_tpl.bzl  fdt_overlay.bzl  fdt_overlay.md  providers.bzl  providers.md
scripts/: install_deps.sh
