module(
    name = "rules_dtc",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

# The Device Tree Compiler toolchain (provides @dtc//:dtc, @dtc//:fdtoverlay,
# @dtc//:fdtdump, @dtc//:fdtget, @dtc//:fdtput, ...).
bazel_dep(name = "dtc", version = "1.7.2.bcr.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.3.1")

# Documentation generation and linting.
bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)
