load(
    "@rules_dtc//:defs.bzl",
    "dtbo_compile",
    "dtc_compile",
    "dts_test",
    "fdt_overlay",
)

# Two overlays applied in order onto the same base blob.
dtc_compile(
    name = "base",
    src = "base.dts",
    symbols = True,
)

dtbo_compile(
    name = "ov_enable",
    src = "ov_enable.dts",
)

dtbo_compile(
    name = "ov_props",
    src = "ov_props.dts",
)

fdt_overlay(
    name = "merged",
    base = ":base",
    overlays = [
        ":ov_enable",
        ":ov_props",
    ],
)

dts_test(
    name = "merged_test",
    dtb = ":merged",
    properties = {
        "/soc/serial@10000000|status": "okay",
        "/soc/serial@10000000|current-speed": "115200",
        "/soc/serial@10000000|clock-frequency": "48000000",
    },
)
